MDEV-4813 Replication fails on updating a MEMORY table with an index using btree

skip NULL VARCHAR key parts like it's done elsewhere